[package]
name = "warp-reverse-proxy"
version = "0.2.1"
authors = ["danielsanchezq <daniel.sanchez@iohk.io>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
homepage = "https://github.com/danielSanchezQ/warp-reverse-proxy"
repository = "https://github.com/danielSanchezQ/warp-reverse-proxy"
description = "Warp filter that acts as a reverse proxy, forwarding the request to a proxy address and extracting a response."
readme = "README.md"
keywords = ["warp", "proxy", "reverse", "filter"]
categories = ["web-programming", "web-programming::http-server"]
exclude = [
    ".github",
]

[dependencies]
hyper = "0.14"
lazy_static = "1.4.0"
reqwest = { version = "0.11", default-features = false}
thiserror = "1.0.23"
unicase = "2.6.0"
warp = "0.3"

[dev-dependencies]
bytes = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
