[package]
name = "warp-reverse-proxy"
version = "0.5.0"
authors = ["danielsanchezq <sanchez.quiros.daniel@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://github.com/danielSanchezQ/warp-reverse-proxy"
repository = "https://github.com/danielSanchezQ/warp-reverse-proxy"
description = "Warp filter that acts as a reverse proxy, forwarding the request to a proxy address and extracting a response."
readme = "README.md"
keywords = ["warp", "proxy", "reverse", "filter"]
categories = ["web-programming", "web-programming::http-server"]
exclude = [
    ".github",
]

[dependencies]
hyper = "0.14"
once_cell = "1.10"
reqwest = { version = "0.11", default-features = false}
thiserror = "1.0"
unicase = "2.6"
warp = "0.3"

[dev-dependencies]
bytes = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
